--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ body {
   z-index: 9999;
 }
 
+.cookie-banner.hidden {
+  display: none !important;
+}
+
 .cookie-banner p {
   margin: 0;
 }
@@ -104,10 +108,14 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: 10000;
+}
+
+.cookie-modal.active {
+  display: flex;
 }
 
 .modal-content {
