--- a/style.css
+++ b/style.css
@@ -1120,3 +1120,19 @@ body {
     font-size: 0.8rem;
   }
 }
+.cookie-modal {
+  display: none; /* Garante que o modal esteja oculto por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  align-items: center;
+  justify-content: center;
+  z-index: 10000;
+}
+
+.cookie-modal.active {
+  display: flex; /* Mostra o modal quando ativo */
+}
